--- a/lang/ja.json
+++ b/lang/ja.json
@@ -137,5 +137,6 @@
     "per page": "毎ページ",
     "results": "件",
     "to": "から",
-    "Showing": "表示中："
+    "Showing": "表示中：",
+    "Username_ID": "ユーザーID"
 }
