--- a/lang/ja.json
+++ b/lang/ja.json
@@ -138,5 +138,6 @@
     "results": "件",
     "to": "から",
     "Showing": "表示中：",
-    "Username_ID": "ユーザーID"
+    "Username_ID": "ユーザーID",
+    "You're logged in": "ログインしました"
 }
