[update] テナント登録の日本語翻訳を追加およびナビゲーションリンクの更新
アプリケーション内で「テナント登録」を使用するため、ja.json に「テナント登録」の翻訳を追加し、ナビゲーションリンクを日本語化しました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -139,5 +139,6 @@
     "to": "から",
     "Showing": "表示中：",
     "Username_ID": "ユーザーID",
-    "You're logged in": "ログインしました"
+    "You're logged in": "ログインしました",
+    "Tenant Register": "テナント登録"
 }
