[update] テナント登録フォームの多言語対応修正
テナント登録フォーム内のラベルとボタンテキストをvue-i18nを使用して日本語対応しました。これにより、ユーザーインターフェースが日本語表示に対応します。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -140,5 +140,6 @@
     "Showing": "表示中：",
     "Username_ID": "ユーザーID",
     "You're logged in": "ログインしました",
-    "Tenant Register": "テナント登録"
+    "Tenant Register": "テナント登録",
+    "Tenant Name": "テナント名"
 }
