--- a/lang/ja.json
+++ b/lang/ja.json
@@ -141,5 +141,6 @@
     "Username_ID": "ユーザーID",
     "You're logged in": "ログインしました",
     "Tenant Register": "テナント登録",
-    "Tenant Name": "テナント名"
+    "Tenant Domain ID": "テナントID",
+    "Business Name": "事業者名"
 }
