[add] Headコンポーネントでページタイトルの多言語対応を追加
Inertia.jsの`Head`コンポーネントを使用し、ページタイトルに多言語対応を追加しました。また、`ja.json`に`Forum`キーを追加して、日本語翻訳を対応させました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -143,5 +143,6 @@
     "Tenant Register": "テナント登録",
     "Tenant Domain ID": "テナントID",
     "Business Name": "事業所名",
-    "Tenant Login": "テナントログイン"
+    "Tenant Login": "テナントログイン",
+    "Forum": "掲示板"
 }
