[update] プロフィール関連フィールドの日本語翻訳を追加
プロフィール情報に関連するフィールド（電話番号、所属部署、プロフィール画像）を日本語に翻訳しました。これにより、フォーム項目の表示がわかりやすくなります。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -144,5 +144,8 @@
     "Tenant Domain ID": "テナントID",
     "Business Name": "事業所名",
     "Tenant Login": "テナントログイン",
-    "Forum": "掲示板"
+    "Forum": "掲示板",
+    "Tel": "電話番号",
+    "Unit": "所属部署",
+    "Profile Image": "プロフィール画像"
 }
