[update] プロフィール情報更新メッセージの文言変更および翻訳の追加
プロフィール情報の更新メッセージを追加された項目に合わせて修正し、日本語翻訳も追加しました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -147,5 +147,6 @@
     "Forum": "掲示板",
     "Tel": "電話番号",
     "Unit": "所属部署",
-    "Profile Image": "プロフィール画像"
+    "Profile Image": "プロフィール画像",
+    "Update your account's profile information.": "アカウント情報を更新できます"
 }
