[update] ログイン状態と管理者画面の翻訳メッセージを更新
ログイン状態を示すメッセージを「ログインしています」に変更し、管理者用のダッシュボードおよび社員登録に関する新規メッセージを追加しました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -26,8 +26,8 @@
     "Login": "ログイン",
     "Log Out": "ログアウト",
     "Logout": "ログアウト",
-    "You're logged in!": "ログインしました",
-    "You are logged in!": "ログインしました",
+    "You're logged in!": "ログインしています",
+    "You are logged in!": "ログインしています",
     "Reset Password": "パスワードのリセット",
     "Create": "作成",
     "Permanently delete your account.": "アカウントを完全に削除",
@@ -139,7 +139,7 @@
     "to": "から",
     "Showing": "表示中：",
     "Username_ID": "ユーザーID",
-    "You're logged in": "ログインしました",
+    "You're logged in": "ログインしています",
     "Tenant Register": "テナント登録",
     "Tenant Domain ID": "テナントID",
     "Business Name": "事業所名",
@@ -148,5 +148,14 @@
     "Tel": "電話番号",
     "Unit": "所属部署",
     "Profile Image": "プロフィール画像",
-    "Update your account's profile information.": "アカウント情報を更新できます"
+    "Update your account's profile information.": "アカウント情報を更新できます",
+    "Admin Dashboard": "管理者専用画面",
+    "Employee Registration": "社員新規登録",
+    "Register a new employee.": "新しい社員を登録します",
+    "Employee List": "社員一覧",
+    "Check the list of registered employees.": "登録済みの社員の一覧を確認できます",
+    "List page": "一覧ページへ",
+    "Unit Name Registration": "ユニット名登録",
+    "Register a new unit name.": "新しいユニット名を登録します",
+    "Registration page": "登録ページへ"
 }
