[update] ユニット登録ページの国際化対応を追加
ユニット登録ページのテキストに国際化対応を追加し、各要素のタイトルとラベルを翻訳可能にしました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -157,5 +157,8 @@
     "List page": "一覧ページへ",
     "Unit Name Registration": "ユニット名登録",
     "Register a new unit name.": "新しいユニット名を登録します",
-    "Registration page": "登録ページへ"
+    "Registration page": "登録ページへ",
+    "Unit Registration": "部署登録",
+    "Unit Name": "部署名",
+    "Register Unit": "部署登録"
 }
