[add] 部署管理に関連する日本語翻訳キーを追加
部署一覧表示と削除機能に対応するため、"Unit List" や "Delete Unit" などの翻訳キーを追加しました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -160,5 +160,9 @@
     "Registration page": "登録ページへ",
     "Unit Registration": "部署登録",
     "Unit Name": "部署名",
-    "Register Unit": "部署登録"
+    "Register Unit": "部署登録",
+    "Unit List": "部署一覧",
+    "Delete Unit": "部署削除",
+    "No units available.": "部署がありません",
+    "Delete": "削除"
 }
