--- a/lang/ja.json
+++ b/lang/ja.json
@@ -164,5 +164,8 @@
     "Unit List": "部署一覧",
     "Delete Unit": "部署削除",
     "No units available.": "部署がありません",
-    "Delete": "削除"
+    "Delete": "削除",
+    "Unit Management": "部署管理",
+    "Manage unit names.": "部署名を管理します",
+    "Management page": "管理ページへ"
 }
