--- a/lang/ja.json
+++ b/lang/ja.json
@@ -167,5 +167,6 @@
     "Delete": "削除",
     "Unit Management": "部署管理",
     "Manage unit names.": "部署名を管理します",
-    "Management page": "管理ページへ"
+    "Management page": "管理ページへ",
+    "New user registration": "社員新規登録"
 }
