[add] ユーザー未登録時のメッセージおよび日本語翻訳を追加
ユーザーが存在しない場合に「No user available」と表示されるメッセージを追加し、日本語翻訳に「社員が登録されていません」を設定しました。これにより、ユーザーリストが空の場合の表示がわかりやすくなります。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -168,5 +168,6 @@
     "Unit Management": "部署管理",
     "Manage unit names.": "部署名を管理します",
     "Management page": "管理ページへ",
-    "New user registration": "社員新規登録"
+    "New user registration": "社員新規登録",
+    "No user available": "社員が登録されていません"
 }
