[update] 社員登録フォームの翻訳キーとページタイトルの修正
"User registration" の翻訳キーを追加し、ページタイトルおよび見出しを統一しました。また、不要なリンクのインポートを削除し、コードの簡潔化を図りました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -169,5 +169,6 @@
     "Manage unit names.": "部署名を管理します",
     "Management page": "管理ページへ",
     "New user registration": "社員新規登録",
-    "No user available": "社員が登録されていません"
+    "No user available": "社員が登録されていません",
+    "User registration": "社員登録"
 }
