[add] 管理者登録ページ(RegisterAdmin.vue)の作成と翻訳キーの追加
管理者ユーザー登録のための新規ページを作成し、関連する翻訳キーを追加しました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -170,5 +170,6 @@
     "Management page": "管理ページへ",
     "New user registration": "社員新規登録",
     "No user available": "社員が登録されていません",
-    "User registration": "社員登録"
+    "User registration": "社員登録",
+    "Admin Registration": "管理者登録"
 }
