[update] 管理者権限移動機能のUIと翻訳文言を改善
UIロジックをInertiaの`usePage`を活用する形に変更し、コードの簡素化を図りました。また、翻訳文言を追加して、管理者権限移動に関する案内をより分かりやすくしました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -174,5 +174,7 @@
     "Admin Registration": "管理者登録",
     "Transfer Admin Role": "管理者権限の移動",
     "Transfer admin privileges to another user.": "管理者権限を他のユーザーに移動します",
-    "Transfer page": "管理者権限移動ページへ"
+    "Transfer page": "管理者権限移動ページへ",
+    "Select a user to transfer admin privileges.": "管理者権限を移動するユーザーを選択してください。",
+    "Transfer": "移動"
 }
