[add] 現在の管理者を表示する機能を追加
管理者移動ページに現在の管理者を明確に表示し、他のユーザーと区別するUIを追加しました。また、現在の管理者には管理者権限移動操作を無効化するボタンを設定しました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -176,5 +176,6 @@
     "Transfer admin privileges to another user.": "管理者権限を他のユーザーに移動します",
     "Transfer page": "管理者権限移動ページへ",
     "Select a user to transfer admin privileges.": "管理者権限を移動するユーザーを選択してください。",
-    "Transfer": "移動"
+    "Transfer": "移動",
+    "Current Admin": "現在の管理者"
 }
