--- a/lang/ja.json
+++ b/lang/ja.json
@@ -173,9 +173,9 @@
     "User registration": "社員登録",
     "Admin Registration": "管理者登録",
     "Transfer Admin Role": "管理者権限の移動",
-    "Transfer admin privileges to another user.": "管理者権限を他のユーザーに移動します",
+    "Transfer admin privileges to another user.": "管理者権限を他の社員に移動します",
     "Transfer page": "管理者権限移動ページへ",
-    "Select a user to transfer admin privileges.": "管理者権限を移動するユーザーを選択してください。",
+    "Select a user to transfer admin privileges.": "管理者権限を移動する社員を選択してください。",
     "Transfer": "移動",
     "Current Admin": "現在の管理者"
 }
