[update] ログイン状態に応じたメッセージ表示を追加
通常ログインとゲストログインを区別し、画面上で適切なメッセージを表示するように変更しました。ゲストログイン時には「ゲストユーザーとしてログインしています」というメッセージを日本語で表示します。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -28,6 +28,7 @@
     "Logout": "ログアウト",
     "You're logged in!": "ログインしています",
     "You are logged in!": "ログインしています",
+    "Logged in as guest user": "ゲストユーザーとしてログインしています",
     "Reset Password": "パスワードのリセット",
     "Create": "作成",
     "Permanently delete your account.": "アカウントを完全に削除",
