[update] 翻訳文言を修正して表現を改善
「保存されました」を「変更が保存されました」に変更し、より正確な表現に修正しました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -15,7 +15,7 @@
     "Update Password": "パスワードの更新",
     "Ensure your account is using a long, random password to stay secure.": "十分に長くランダムなパスワードを使用して、アカウントのセキュリティを高めましょう",
     "Save": "保存",
-    "Saved.": "保存されました",
+    "Saved.": "変更が保存されました",
     "Already registered?": "既に登録済みの方",
     "Register": "登録",
     "Remember me": "このブラウザに認証情報を記憶",
