[add] ログイン成功メッセージに掲示板へのリンクを追加
ログイン後のユーザー体験を向上させるため、ログイン成功メッセージ横に掲示板へのリンクを追加しました。また、ユーティリティ関数を利用してコードの再利用性を向上させました。リンクテキストの日本語翻訳も追加しています。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -178,5 +178,6 @@
     "Transfer page": "管理者権限移動ページへ",
     "Select a user to transfer admin privileges.": "管理者権限を移動する社員を選択してください。",
     "Transfer": "移動",
-    "Current Admin": "現在の管理者"
+    "Current Admin": "現在の管理者",
+    "Go to Forum": "掲示板へ"
 }
