--- a/lang/ja.json
+++ b/lang/ja.json
@@ -179,5 +179,6 @@
     "Select a user to transfer admin privileges.": "管理者権限を移動する社員を選択してください。",
     "Transfer": "移動",
     "Current Admin": "現在の管理者",
-    "Go to Forum": "掲示板へ"
+    "Go to Forum": "掲示板へ",
+    "By setting your unit, you can access the forum.": "所属部署を設定すると、掲示板にアクセスできます"
 }
