[add] 部署選択プルダウンに未所属プレースホルダーと翻訳を追加
所属部署を選択する際に、初期状態で「未所属」と表示するプレースホルダーを追加しました。また、未所属時に表示するテキストと説明文の翻訳キーを追加しました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -180,5 +180,7 @@
     "Transfer": "移動",
     "Current Admin": "現在の管理者",
     "Go to Forum": "掲示板へ",
-    "By setting your unit, you can access the forum.": "所属部署を設定すると、掲示板にアクセスできます"
+    "By setting your unit, you can access the forum.": "所属部署を設定すると、掲示板にアクセスできます",
+    "Unassigned": "未所属",
+    "Select your unit": "所属部署を選択してください"
 }
