--- a/lang/ja.json
+++ b/lang/ja.json
@@ -182,5 +182,6 @@
     "Go to Forum": "掲示板へ",
     "By setting your unit, you can access the forum.": "所属部署を設定すると、掲示板にアクセスできます",
     "Unassigned": "未所属",
-    "Select your unit": "所属部署を選択してください"
+    "Select your unit": "所属部署を選択してください",
+    "Residents": "利用者ページ"
 }
