--- a/lang/ja.json
+++ b/lang/ja.json
@@ -46,7 +46,7 @@
     "Send Password Reset Link": "パスワードリセットメールを送信",
     "This is a secure area of the application. Please confirm your password before continuing.": "認証が必要なページです。パスワードを入力して確認ボタンをクリックしてください",
     "Confirm": "確認",
-    "Dashboard": "管理画面",
+    "Dashboard": "管理ページ",
     "Manage Team": "チーム管理",
     "Team Settings": "チーム設定",
     "Create New Team": "新規チーム作成",
@@ -150,7 +150,7 @@
     "Unit": "所属部署",
     "Profile Image": "プロフィール画像",
     "Update your account's profile information.": "アカウント情報を更新できます",
-    "Admin Dashboard": "管理者専用画面",
+    "Admin Dashboard": "管理者専用メニュー",
     "Employee Registration": "社員新規登録",
     "Register a new employee.": "新しい社員を登録します",
     "Employee List": "社員一覧",
