[update] 部署管理の表記変更および翻訳文言を追加
部署管理の表記を変更し、新たに翻訳も追加しました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -187,5 +187,6 @@
     "Resident Registration": "利用者登録",
     "Register a new resident.": "新しい利用者を登録します",
     "Resident Name": "利用者名",
-    "Register Resident": "利用者登録"
+    "Register Resident": "利用者登録",
+    "Manage unit.": "部署を管理します"
 }
