[update] プロジェクト内の「社員」を「職員」に変更
プロジェクト内のすべての「社員」を「職員」に変更しました。「職員」の方が法人勤務者を含む表現として適切だと考えた上での変更です。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -151,10 +151,10 @@
     "Profile Image": "プロフィール画像",
     "Update your account's profile information.": "アカウント情報を更新できます",
     "Admin Dashboard": "管理者専用メニュー",
-    "Employee Registration": "社員新規登録",
-    "Register a new employee.": "新しい社員を登録します",
-    "Employee List": "社員一覧",
-    "Check the list of registered employees.": "登録済みの社員の一覧を確認できます",
+    "Employee Registration": "職員新規登録",
+    "Register a new employee.": "新しい職員を登録します",
+    "Employee List": "職員一覧",
+    "Check the list of registered employees.": "登録済みの職員の一覧を確認できます",
     "List page": "一覧ページへ",
     "Unit Name Registration": "ユニット名登録",
     "Register a new unit name.": "新しいユニット名を登録します",
@@ -169,14 +169,14 @@
     "Unit Management": "部署管理",
     "Manage unit names.": "部署名を管理します",
     "Management page": "管理ページへ",
-    "New user registration": "社員新規登録",
-    "No user available": "社員が登録されていません",
-    "User registration": "社員登録",
+    "New user registration": "職員新規登録",
+    "No user available": "職員が登録されていません",
+    "User registration": "職員登録",
     "Admin Registration": "管理者登録",
     "Transfer Admin Role": "管理者権限の移動",
-    "Transfer admin privileges to another user.": "管理者権限を他の社員に移動します",
+    "Transfer admin privileges to another user.": "管理者権限を他の職員に移動します",
     "Transfer page": "管理者権限移動ページへ",
-    "Select a user to transfer admin privileges.": "管理者権限を移動する社員を選択してください。",
+    "Select a user to transfer admin privileges.": "管理者権限を移動する職員を選択してください。",
     "Transfer": "移動",
     "Current Admin": "現在の管理者",
     "Go to Forum": "掲示板へ",
@@ -188,5 +188,6 @@
     "Register a new resident.": "新しい利用者を登録します",
     "Resident Name": "利用者名",
     "Register Resident": "利用者登録",
-    "Manage unit.": "部署を管理します"
+    "Manage unit.": "部署を管理します",
+    "Staff": "職員ページ"
 }
