[update]職員ページのファイル名と権限名をStaffに変更
職員ページの命名をEmployeeからStaffに変更しました。また、関連する権限名やUIテキストも同様に更新しました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -151,10 +151,10 @@
     "Profile Image": "プロフィール画像",
     "Update your account's profile information.": "アカウント情報を更新できます",
     "Admin Dashboard": "管理者専用メニュー",
-    "Employee Registration": "職員新規登録",
-    "Register a new employee.": "新しい職員を登録します",
-    "Employee List": "職員一覧",
-    "Check the list of registered employees.": "登録済みの職員の一覧を確認できます",
+    "Staff Registration": "職員新規登録",
+    "Register a new staff.": "新しい職員を登録します",
+    "Staff List": "職員一覧",
+    "Check the list of registered staff.": "登録済みの職員の一覧を確認できます",
     "List page": "一覧ページへ",
     "Unit Name Registration": "ユニット名登録",
     "Register a new unit name.": "新しいユニット名を登録します",
