--- a/lang/ja.json
+++ b/lang/ja.json
@@ -189,5 +189,6 @@
     "Resident Name": "利用者名",
     "Register Resident": "利用者登録",
     "Manage unit.": "部署を管理します",
-    "Staff": "職員ページ"
+    "Staff": "職員ページ",
+    "Register or delete departments.": "部署の登録や削除を行います"
 }
