[update] 部署管理ページへのリンクテキストを修正
部署管理ページへのリンクテキストをより具体的にするため、「管理ページへ」から「部署管理ページへ」に変更しました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -169,6 +169,7 @@
     "Unit Management": "部署管理",
     "Manage unit names.": "部署名を管理します",
     "Management page": "管理ページへ",
+    "Unit Management page": "部署管理ページへ",
     "New user registration": "職員新規登録",
     "No user available": "職員が登録されていません",
     "User registration": "職員登録",
