[add] ダークモード関連の翻訳キーを追加
テーマ切替機能に対応するため、「システム設定」「ライト」「ダーク」の翻訳を追加しました。

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -4,6 +4,9 @@
     "Profile Information": "アカウント情報",
     "Cancel": "キャンセル",
     "Delete Account": "アカウントを削除",
+    "System": "システム設定",
+    "Light": "ライト",
+    "Dark": "ダーク",
     "Email": "メールアドレス",
     "E-Mail Address": "メールアドレス",
     "Email Address": "メールアドレス",
