--- a/lang/ja.json
+++ b/lang/ja.json
@@ -194,5 +194,6 @@
     "Register Resident": "利用者登録",
     "Manage unit.": "部署を管理します",
     "Staff": "職員ページ",
-    "Register or delete departments.": "部署の登録や削除を行います"
+    "Register or delete departments.": "部署の登録や削除を行います",
+    "Theme": "テーマ"
 }
