--- a/lang/ja.json
+++ b/lang/ja.json
@@ -188,6 +188,7 @@
     "Unassigned": "未所属",
     "Select your unit": "所属部署を選択してください",
     "Residents": "利用者ページ",
+    "Calendar": "カレンダー",
     "Resident Registration": "利用者登録",
     "Register a new resident.": "新しい利用者を登録します",
     "Resident Name": "利用者名",
